--- a/public/custom_css/bootstrap-override.css
+++ b/public/custom_css/bootstrap-override.css
@@ -37,3 +37,7 @@
 .hide {
     display: none;
 }
+
+.p{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Arial, sans-serif;
+}
