Scaffold with routes

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h3>You don't be here!!</h3>
+<nav-bar></nav-bar>
+<side-menu></side-menu>
+<router-outlet></router-outlet>
