navBar Template for every view that is loaded in the root router-outlet

--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,3 +1,13 @@
-<p>
-    nav-bar works!
-</p>
+<div class="d-flex nav-bar">
+    <div>
+        <div class="logo">
+            <a href="">
+                <img class="profile-picture" src="assets/Logos/assuresoft-main-menu-logo.png">
+            </a>
+        </div>
+    </div>
+
+    <div class="title d-flex align-items-center flex-row-reverse">
+        <ng-container *ngTemplateOutlet="navBarTemplate"></ng-container>
+    </div>
+</div>
