--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,4 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<nav-bar></nav-bar>
-<side-menu></side-menu>
-<router-outlet></router-outlet>
+<nav-bar [navBarTemplate]="navBarTemplate"></nav-bar>
+<div class="d-flex">
+    <side-menu></side-menu>
+    <router-outlet (activate)="componentAdded($event)"></router-outlet>
+</div>
