Basic styles for the basic scaffold

--- a/Frontend/src/app/home/index/index.component.html
+++ b/Frontend/src/app/home/index/index.component.html
@@ -2,6 +2,7 @@
     Home Title
 </ng-template>
 
-<p>
-    index works!
-</p>
+<div class="container">
+    <p>Home</p>
+    <div style="background: black"></div>
+</div>
