--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex nav-bar">
     <div>
         <div class="logo">
-            <a href="">
-                <img class="profile-picture" src="assets/Logos/assuresoft-main-menu-logo.png">
+            <a href="https://www.assuresoft.com" target="_blank">
+                <div class="logo-img"></div>
             </a>
         </div>
     </div>
