--- a/Frontend/src/app/side-menu/side-menu.component.html
+++ b/Frontend/src/app/side-menu/side-menu.component.html
@@ -1,3 +1,7 @@
-<p>
-    side-menu works!
-</p>
+<div class="side-bar p-2">
+    <div>Menu 1</div>
+    <div>Menu 2</div>
+    <div>Menu 3</div>
+    <div>Menu 4</div>
+    <div>Menu 5</div>
+</div>
