--- a/Frontend/src/global-styles/variables.scss
+++ b/Frontend/src/global-styles/variables.scss
@@ -1,2 +1,21 @@
-$nav-bar-bg-top: #f0f0f0;
-$nav-bar-bg-button: white 60%;
+//Nav Bar
+$navBar-bg-top: rgb(51, 51, 51);
+$navBar-bg-button: rgb(77, 77, 77) 60%;
+$navBar-height: 70px;
+$navBar-text-color: white;
+//Logo NavBar
+$logo-inverted-color: true;
+$logo-img-big-size: 185px;
+$logo-img-small-size: 48px;
+//Logo NarBar Container
+$logo-container-big-size: 240px;
+$logo-container-small-size: 70px;
+$logo-container-big-padding: 20px;
+$logo-container-small-padding: 11px;
+//Title Container
+$title-margin-sides: 20px;
+
+//Side Bar
+$sidebar-width-big: 240px;
+$sidebar-width-small: 40px;
+$sidebar-bg: rgb(202, 202, 202);
