--- a/Frontend/src/app/side-menu/side-menu.component.scss
+++ b/Frontend/src/app/side-menu/side-menu.component.scss
@@ -1,11 +1,81 @@
 @import "~bootstrap/scss/bootstrap";
 @import "../../global-styles/variables";
 
-.side-bar{
+.side-bar {
   background: $sidebar-bg;
   width: $sidebar-width-big;
   height: 100%;
-  @include media-breakpoint-down(md){
+  @include media-breakpoint-down(md) {
     width: $sidebar-width-small;
+  }
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+a:active {
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+a{
+  color: black;
+}
+
+.active{
+  background-color: $sidebar-bg-hover;
+  color: whitesmoke;
+}
+.menu-title{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  color: white;
+  background-color: #656565;
+}
+.menu-option {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px 10px 20px;
+  .text {
+    display: block;
+    font-size: 1.3rem;
+    font-weight: 300;
+  }
+
+  &:hover {
+    background-color: $sidebar-bg-hover;
+    cursor: pointer;
+  }
+  @include media-breakpoint-down(md) {
+    display: block;
+    padding: 8px;
+    .text {
+      display: none;
+    }
+  }
+}
+
+.telegram-icon {
+  display: block;
+  text-indent: -9999px;
+  height: 25px;
+  width: 25px;
+  path {
+    fill: #2780de;
+  }
+  .plane{
+    fill: white !important;
   }
 }
