--- a/Frontend/src/global-styles/variables.scss
+++ b/Frontend/src/global-styles/variables.scss
@@ -3,6 +3,7 @@ $navBar-bg-top: rgb(51, 51, 51);
 $navBar-bg-button: rgb(77, 77, 77) 60%;
 $navBar-height: 70px;
 $navBar-text-color: white;
+
 //Logo NavBar
 $logo-inverted-color: true;
 $logo-img-big-size: 185px;
@@ -19,3 +20,4 @@ $title-margin-sides: 20px;
 $sidebar-width-big: 240px;
 $sidebar-width-small: 40px;
 $sidebar-bg: rgb(202, 202, 202);
+$sidebar-bg-hover: darkgrey;
