Telegram how to install page

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -4,7 +4,7 @@
         <div>
             <side-menu></side-menu>
         </div>
-        <div style="width: 100%;">
+        <div class="container-content">
             <router-outlet (activate)="componentAdded($event)"></router-outlet>
         </div>
     </div>
