--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 
-    <div class="title d-flex align-items-center flex-row-reverse">
+    <div class="title d-flex align-items-center flex-row-reverse mr-md-4 ml-md-4">
         <ng-container *ngTemplateOutlet="navBarTemplate"></ng-container>
     </div>
 </div>
