--- a/Frontend/src/app/side-menu/side-menu.component.html
+++ b/Frontend/src/app/side-menu/side-menu.component.html
@@ -3,7 +3,7 @@
         Menu
     </div>
     <!-- Telegram -->
-    <a class="menu-option" routerLink="/instagram" routerLinkActive="active">
+    <a class="menu-option" routerLink="/telegram" routerLinkActive="active">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="icon telegram-icon mr-3">
             <path d="M96 30.6c2.6 6.2 4 12.6 4 19.4s-1.4 13.2-4 19.4 -6.2 11.4-10.6 16c-4.4 4.4-9.8 8-16 10.6s-12.6 4-19.4 4 -13.2-1.4-19.4-4 -11.4-6.2-16-10.6c-4.4-4.4-8-9.8-10.6-16S0 56.8 0 50s1.4-13.2 4-19.4 6.2-11.4 10.6-16c4.4-4.4 9.8-8 16-10.6S43.2 0 50 0s13.2 1.4 19.4 4 11.4 6.2 16 10.6C89.8 19.2 93.2 24.6 96 30.6z"/>
             <path class="plane"
