--- a/Frontend/src/app/app.component.scss
+++ b/Frontend/src/app/app.component.scss
@@ -1,3 +1,4 @@
+@import "~bootstrap/scss/bootstrap";
 @import "../global-styles/variables";
 
 .page-container{
@@ -15,4 +16,13 @@
   left: 0;
   height: 100%;
   width: 100%;
+}
+
+.container-content{
+  width: 100%;
+  margin-left: $sidebar-width-big;
+  padding: 10px;
+  @include media-breakpoint-down(md) {
+    margin-left: $sidebar-width-small;
+  }
 }
