--- a/Frontend/src/global-styles/variables.scss
+++ b/Frontend/src/global-styles/variables.scss
@@ -1,3 +1,7 @@
+
+$body-color:  #4b4f56;
+$font-family-base: Graphik LCG Web, Graphik Arabic Web Regular, -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, Lucida Grande, Sans-Serif;
+
 //Nav Bar
 $navBar-bg-top: rgb(51, 51, 51);
 $navBar-bg-button: rgb(77, 77, 77) 60%;
@@ -14,7 +18,7 @@ $logo-container-small-size: 70px;
 $logo-container-big-padding: 20px;
 $logo-container-small-padding: 11px;
 //Title Container
-$title-margin-sides: 20px;
+$title-margin-sides: 10px;
 
 //Side Bar
 $sidebar-width-big: 240px;
