--- a/Frontend/src/app/telegram/index/index.component.html
+++ b/Frontend/src/app/telegram/index/index.component.html
@@ -12,15 +12,16 @@
         get a token.
     </p>
     <p class="text-justify">
-        Alternatively just use the token from your existing telegram bot just following the Zendesk Support steps.
+        Alternatively just use the token from your existing telegram bot following the Zendesk Support steps.
     </p>
     <h3>BotFather, create a new Telegram bot:</h3>
-    <p class="text-justify">BotFather is the one bot to rule them all. It will help you create new bots and change settings for existing
+    <p class="text-justify">BotFather is the one bot to rule them all. It will help you create new bots and change
+        settings for existing
         ones.</p>
     <ol class="text-justify">
         <li><a href="https://telegram.me/BotFather">Click here</a> to open the BotFather chat.</li>
         <li>Open your Telegram app via Telegram Desktop or Web, a chat with the BotFather should be open.</li>
-        <li>Write and send <kbd>/newbot</kbd> command to create a new bot. The BotFather will ask you a name for your
+        <li>Write and send <kbd>/newbot</kbd> command to create a new bot, the BotFather should ask you a name for your
             bot.
         </li>
         <li>Insert a name for your bot (ex. Acme Support), the BotFather should ask you for a username for your bot.
@@ -34,8 +35,13 @@
     <div class="text-gray text-justify">
         <ul>
             <li>Your Bot’s name is displayed in Contact details and elsewhere.</li>
-            <li>Your Username bot is a short name to be used in mentions and telegram.me links. Usernames are 5-32 characters long and are case sensitive, but may only include Latin chatacters, numbers, and underscores. Your Bot’s username must end in `bot`, ex. ‘tetris_bot’ or ‘TetrisBot’.</li>
-            <li>The token is a string along the lines of <kbd style="word-wrap: break-word;">110201543:AAHdqTcvCH1vGWJxfSeofSAs0K5PALDsaw</kbd> that is required to authorize the bot to use the integration with Zendesk Support.</li>
+            <li>Your Username bot is a short name to be used in mentions and telegram.me links. Usernames are 5-32
+                characters long and are case sensitive, but may only include Latin chatacters, numbers, and underscores.
+                Your Bot’s username must end in `bot`, ex. ‘tetris_bot’ or ‘TetrisBot’.
+            </li>
+            <li>The token is a string along the lines of <kbd style="word-wrap: break-word;">110201543:AAHdqTcvCH1vGWJxfSeofSAs0K5PALDsaw</kbd>
+                that is required to authorize the bot to use the integration with Zendesk Support.
+            </li>
             <li>If your existing token is compromised or you lost it for some reason, use the /token command to generate
                 a new one.
             </li>
