new frontend app with basic instagram page

--- a/Frontend/src/app/instagram/how-to-install-page/how-to-install-page.component.html
+++ b/Frontend/src/app/instagram/how-to-install-page/how-to-install-page.component.html
@@ -1,3 +1,27 @@
-<p>
-    how-to-install-page works!
-</p>
+<div class="container mt-4">
+  <h1 class="font-weight-bold">Getting Started</h1>
+  <p class="mb-0">The Instagram Channel Integration needs:</p>
+  <div class="text-gray text-justify">
+    <ul>
+      <li>An active Instagram Business account. To know how to change to an Instagram Business account <a href="">click here</a>.</li>
+      <li>An active Facebook page which has linked an Instagram Business account. To know how to link an Instagram
+        Business account to a Facebook page <a href="#">click here</a>.
+      </li>
+    </ul>
+  </div>
+
+  <h3>Zendesk Support Steps:</h3>
+  <ol class="text-justify">
+    <li>Go to your Zendesk admin page and look out for <kbd>Channel Integrations</kbd> button at the side bar.</li>
+    <li>Select our “Instagram Channel” app.</li>
+    <li>Review the ‘General Information’ tab and make changes if applicable.</li>
+    <li>Select the “Accounts” tab.</li>
+    <li>In the pop-up page, set the Instagram integration name for your company.</li>
+    <li>Click on ‘Connect to Facebook’ button.</li>
+    <li>Login to the Facebook account that has the Facebook page you will use if applicable.</li>
+    <li>In the next pop-up page, select the Facebook page which has a linked Instagram Business account.</li>
+    <li>Press the “Submit” button.</li>
+  </ol>
+  <p class="text-justify">The new account is ready to start receiving your Instagram post as soon the customer start to
+    comment.</p>
+</div>
