--- a/Frontend/src/app/instagram/index/index.component.html
+++ b/Frontend/src/app/instagram/index/index.component.html
@@ -1,5 +1,5 @@
 <ng-template #navBarTemplate>
-    How to Install Instagram Channel Integration
+    Instagram Channel Integration
 </ng-template>
 
 <router-outlet></router-outlet>
