--- a/Frontend/src/global-styles/variables.scss
+++ b/Frontend/src/global-styles/variables.scss
@@ -25,3 +25,4 @@ $sidebar-width-big: 240px;
 $sidebar-width-small: 40px;
 $sidebar-bg: rgb(202, 202, 202);
 $sidebar-bg-hover: darkgrey;
+$sidebar-bg-hover-submenu: #bb4343;
