--- a/Frontend/src/app/instagram/how-to-install-page/how-to-install-page.component.html
+++ b/Frontend/src/app/instagram/how-to-install-page/how-to-install-page.component.html
@@ -1,18 +1,43 @@
 <div class="container mt-4">
   <h1 class="font-weight-bold">Getting Started</h1>
-  <p class="mb-0">The Instagram Channel Integration needs:</p>
+  <p class="text-justify">To start talking with your customer using your Instagram Business Account, install our
+    “Instagram Channel” app from
+    <a href="https://www.zendesk.com/apps">Zendesk Marketplace</a>. Then add your Instagram Business Account.</p>
+  <p class="mb-0">Instagram Channel - Requirements before configuring Zendesk:</p>
+  <p>Before start integrating Zendesk Support and Instagram you will need the next point.</p>
   <div class="text-gray text-justify">
     <ul>
-      <li>An active Instagram Business account. To know how to change to an Instagram Business account <a href="">click here</a>.</li>
-      <li>An active Facebook page which has linked an Instagram Business account. To know how to link an Instagram
-        Business account to a Facebook page <a href="#">click here</a>.
+      <li>An active Instagram Business Account linked to an active Facebook Page. To know how to change to an Instagram
+        Business Account and link it to a Facebook Page follow these steps.
       </li>
     </ul>
   </div>
-
-  <h3>Zendesk Support Steps:</h3>
+  <p class="text-muted">(Note: Please follow these steps using the Instagram mobile app especially when linking it to a
+    Facebook page)</p>
   <ol class="text-justify">
-    <li>Go to your Zendesk admin page and look out for <kbd>Channel Integrations</kbd> button at the side bar.</li>
+    <li>
+      From your existing profile in the mobile app, tap on <b>Settings</b>. (If you don’t have a profile yet, install
+      Instagram
+      on your device and follow the prompts to create a personal profile).
+    </li>
+    <li>
+      Choose the <b>Switch to Business Account</b> option.
+    </li>
+    <li>
+      On the <b>Set Up Your Business Account</b> page, review your business’s contact information, make any changes and
+      tap
+      Continue.
+    </li>
+    <li>
+      On the Connect to Facebook page, choose the Facebook page you will link to your Instagram Business Account and tap
+      <b>Done</b>.
+    </li>
+  </ol>
+  <h3>Zendesk Support Steps:</h3>
+  <p>Preparation - Adding an Instagram Business Account to Zendesk:</p>
+  <ol class="text-justify">
+    <li>Install the Instagram Channel Integration app from the Zendesk Marketplace.</li>
+    <li>Go to your Zendesk admin page and look out for <b>Channel Integrations</b> button at the side bar.</li>
     <li>Select our “Instagram Channel” app.</li>
     <li>Review the ‘General Information’ tab and make changes if applicable.</li>
     <li>Select the “Accounts” tab.</li>
@@ -21,6 +46,7 @@
     <li>Login to the Facebook account that has the Facebook page you will use if applicable.</li>
     <li>In the next pop-up page, select the Facebook page which has a linked Instagram Business account.</li>
     <li>Press the “Submit” button.</li>
+    <li>That’s it! Start receiving your Instagram posts.</li>
   </ol>
   <p class="text-justify">The new account is ready to start receiving your Instagram post as soon the customer start to
     comment.</p>
