--- a/Frontend/src/app/side-menu/side-menu.component.scss
+++ b/Frontend/src/app/side-menu/side-menu.component.scss
@@ -91,6 +91,7 @@ a{
     display: block;
     font-size: 1rem;
     font-weight: 200;
+    margin-left: 10px;
   }
 
   &:hover {
@@ -102,6 +103,9 @@ a{
     padding: 8px;
     .text {
       display: none;
+    }
+    fa-icon{
+      margin-left: 3px;
     }
   }
 }
